--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "typescript": "^5.0.0",
-    "vite": "^4.4.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "vite": "^5.0.0"
   }
 }
